--- a/business-fe/src/App.css
+++ b/business-fe/src/App.css
@@ -1,5 +1,12 @@
 .App {
   text-align: center;
+  align-items: stretch;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  margin: 0;
+  min-height: 100vh;
+  position: relative;
 }
 
 .App-logo {
