--- a/business-fe/src/components/SchedulePage/Calendar.css
+++ b/business-fe/src/components/SchedulePage/Calendar.css
@@ -1,5 +1,5 @@
 .react-calendar {
-  max-width: 100%;
+  max-width: 80%;
   background: white;
   border: 1px solid #a0a096;
   border-radius: 20px;
@@ -43,7 +43,7 @@
   background: none;
 }
 .react-calendar__navigation button:disabled {
-  background-color: #f0f0f0;
+  background-color: #000000;
   border-radius: 20px;
 }
 .react-calendar__navigation button:enabled:hover,
@@ -87,43 +87,45 @@
 }
 .react-calendar__tile:disabled {
   background-color: #f0f0f0;
-  border-radius: 20px;
+  border-radius: 10px;
 }
 .react-calendar__tile:enabled:hover,
 .react-calendar__tile:enabled:focus {
   background-color: #e6e6e6;
-  border-radius: 20px;
+  border-radius: 10px;
 }
 .react-calendar__tile--now {
-  background: #ffff76;
-  border-radius: 20px;
+  background: #B08664;
+  color: #FFFFFF;
+  border-radius: 10px;
 }
 .react-calendar__tile--now:enabled:hover,
 .react-calendar__tile--now:enabled:focus {
-  background: #ffffa9;
-  border-radius: 20px;
+  background: #DCD7C9;
+  color: #000000;
+  border-radius: 10px;
 }
 .react-calendar__tile--hasActive {
   background: #76baff;
-  border-radius: 20px;
+  border-radius: 10px;
 }
 .react-calendar__tile--hasActive:enabled:hover,
 .react-calendar__tile--hasActive:enabled:focus {
   background: #a9d4ff;
-  border-radius: 20px;
+  border-radius: 10px;
 }
 .react-calendar__tile--active {
   background: #006edc;
   color: white;
-  border-radius: 20px;
+  border-radius: 10px;
 }
 .react-calendar__tile--active:enabled:hover,
 .react-calendar__tile--active:enabled:focus {
   background: #1087ff;
-  border-radius: 20px;
+  border-radius: 10px;
 }
 .react-calendar--selectRange .react-calendar__tile--hover {
   background-color: #e6e6e6;
-  border-radius: 20px;
+  border-radius: 10px;
 }
 
