--- a/customer-front/ebs/src/App.css
+++ b/customer-front/ebs/src/App.css
@@ -1,7 +1,13 @@
 .App {
   text-align: center;
+  align-items: stretch;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  margin: 0;
+  min-height: 100vh;
+  position: relative;
 }
-
 .App-logo {
   height: 40vmin;
   pointer-events: none;
