--- a/business-fe/src/App.css
+++ b/business-fe/src/App.css
@@ -37,6 +37,10 @@
   color: #61dafb;
 }
 
+main {
+  background-color: #455657;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
