--- a/business-fe/src/components/SchedulePage/Calendar.css
+++ b/business-fe/src/components/SchedulePage/Calendar.css
@@ -1,9 +1,9 @@
 .react-calendar {
   max-width: 80%;
-  background: white;
+  background: #fdfdfd;
   border: 1px solid #a0a096;
   border-radius: 20px;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Do Hyeon', Arial, Helvetica, sans-serif;
   line-height: 1.125em;
 }
 .react-calendar--doubleView {
@@ -26,7 +26,7 @@
   box-sizing: border-box;
 }
 .react-calendar button {
-  margin: 8px 0px;
+  margin: 8px 0;
   border: 0;
   outline: none;
 }
@@ -35,7 +35,7 @@
 }
 .react-calendar__navigation {
   display: flex;
-  height: 44px;
+  height: 64px;
   margin-bottom: 1em;
 }
 .react-calendar__navigation button {
@@ -44,7 +44,7 @@
 }
 .react-calendar__navigation button:disabled {
   background-color: #000000;
-  border-radius: 20px;
+  border-radius: 25px;
 }
 .react-calendar__navigation button:enabled:hover,
 .react-calendar__navigation button:enabled:focus {
@@ -55,7 +55,7 @@
   text-align: center;
   text-transform: uppercase;
   font-weight: bold;
-  font-size: 0.75em;
+  font-size: 1.5em;
 }
 .react-calendar__month-view__weekdays__weekday {
   padding: 0.5em;
@@ -83,7 +83,7 @@
   padding: 10px 6.6667px;
   background: none;
   text-align: center;
-  line-height: 16px;
+  line-height: 24px;
 }
 .react-calendar__tile:disabled {
   background-color: #f0f0f0;
@@ -128,4 +128,19 @@
   background-color: #e6e6e6;
   border-radius: 10px;
 }
-
+.react-calendar__navigation__label__labelText.react-calendar__navigation__label__labelText--from {
+  /* 맨 윗줄 */
+  font-size: 24px;
+}
+button.react-calendar__navigation__arrow {
+  /* 맨 윗줄 양 옆 화살표 */
+  font-size: 20px;
+  font-weight: bold;
+}
+.react-calendar__tile.react-calendar__month-view__days__day > abbr {
+  /* 각 Day 하나씩 */
+  font-size: 20px;
+}
+.react-calendar__tile.react-calendar__month-view__days__day:not(.react-calendar__month-view__days__day--weekend) + .react-calendar__tile.react-calendar__month-view__days__day.react-calendar__month-view__days__day--weekend:not(.react-calendar__month-view__days__day--neighboringMonth) > abbr {
+  color: #0000d1;
+}
