Style: navbar 디자인 , 사이즈 변경.

--- a/customer-front/ebs/src/components/ebsnav/Ebsnav.module.css
+++ b/customer-front/ebs/src/components/ebsnav/Ebsnav.module.css
@@ -1,12 +1,14 @@
 
 .Offcanvas {
-    width: 60% !important;
+    width: 40% !important;
+    background-color: #fbf8f1;
+    color: #361500;
+    font-weight: bold;
 }
-
 .Ebsnav {
     background-image: url("../../assets/nav_img2.png") !important;
     background: #a9927d;
-    color: #f0f0f0;
+    color: #fbf8f1;
     height: 60px;
 }
 
