--- a/customer-front/ebs/src/components/ebsnav/Ebsnav.module.css
+++ b/customer-front/ebs/src/components/ebsnav/Ebsnav.module.css
@@ -1,15 +1,20 @@
 
 .Offcanvas {
-    width: 40% !important;
-    background-color: #fbf8f1;
-    color: #361500;
-    font-weight: bold;
+  width: 40% !important;
+  background-color: #fbf8f1;
+  color: #361500;
+  font-weight: bold;
 }
+
+.Toggle > span {
+    background-image: url("../../assets/menu_fbf8f1.png");
+}
+
 .Ebsnav {
-    background-image: url("../../assets/nav_img2.png") !important;
-    background: #a9927d;
-    color: #fbf8f1;
-    height: 60px;
+  background-image: url("../../assets/nav_img2.png") !important;
+  background: #a9927d;
+  color: #fbf8f1;
+  height: 60px;
 }
 
 .Toggle {
