Style: 예약 탭 수정

--- a/customer-front/ebs/src/components/hairshop/Calendar.css
+++ b/customer-front/ebs/src/components/hairshop/Calendar.css
@@ -1,6 +1,6 @@
 .react-calendar {
   max-width: 100%;
-  background: white;
+  background: #FDFDFD;
   border: 1px solid #a0a096;
   border-radius: 20px;
   font-family: Arial, Helvetica, sans-serif;
@@ -26,7 +26,7 @@
   box-sizing: border-box;
 }
 .react-calendar button {
-  margin: 8px 0px;
+  margin: 8px 0;
   border: 0;
   outline: none;
 }
@@ -35,7 +35,7 @@
 }
 .react-calendar__navigation {
   display: flex;
-  height: 44px;
+  height: 64px;
   margin-bottom: 1em;
 }
 .react-calendar__navigation button {
@@ -43,8 +43,8 @@
   background: none;
 }
 .react-calendar__navigation button:disabled {
-  background-color: #f0f0f0;
-  border-radius: 20px;
+  background-color: #000000;
+  border-radius: 25px;
 }
 .react-calendar__navigation button:enabled:hover,
 .react-calendar__navigation button:enabled:focus {
@@ -55,7 +55,7 @@
   text-align: center;
   text-transform: uppercase;
   font-weight: bold;
-  font-size: 0.75em;
+  font-size: 1.5em;
 }
 .react-calendar__month-view__weekdays__weekday {
   padding: 0.5em;
@@ -83,46 +83,72 @@
   padding: 10px 6.6667px;
   background: none;
   text-align: center;
-  line-height: 16px;
+  line-height: 24px;
 }
 .react-calendar__tile:disabled {
   background-color: #f0f0f0;
-  border-radius: 20px;
+  border-radius: 10px;
 }
 .react-calendar__tile:enabled:hover,
 .react-calendar__tile:enabled:focus {
   background-color: #e6e6e6;
-  border-radius: 20px;
+  border-radius: 10px;
 }
 .react-calendar__tile--now {
-  background: #ffff76;
-  border-radius: 20px;
+  background: #B08664;
+  color: #FFFFFF;
+  border-radius: 10px;
 }
 .react-calendar__tile--now:enabled:hover,
 .react-calendar__tile--now:enabled:focus {
-  background: #ffffa9;
-  border-radius: 20px;
+  background: #DCD7C9;
+  color: #000000;
+  border-radius: 10px;
 }
 .react-calendar__tile--hasActive {
   background: #76baff;
-  border-radius: 20px;
+  border-radius: 10px;
 }
 .react-calendar__tile--hasActive:enabled:hover,
 .react-calendar__tile--hasActive:enabled:focus {
   background: #a9d4ff;
-  border-radius: 20px;
+  border-radius: 10px;
 }
 .react-calendar__tile--active {
   background: #006edc;
   color: white;
-  border-radius: 20px;
+  border-radius: 10px;
 }
 .react-calendar__tile--active:enabled:hover,
 .react-calendar__tile--active:enabled:focus {
   background: #1087ff;
-  border-radius: 20px;
+  border-radius: 10px;
 }
 .react-calendar--selectRange .react-calendar__tile--hover {
   background-color: #e6e6e6;
-  border-radius: 20px;
+  border-radius: 10px;
 }
+.react-calendar__navigation__label__labelText.react-calendar__navigation__label__labelText--from {
+  /* 맨 윗줄 */
+  font-family: 'Do Hyeon', Arial, Helvetica, sans-serif;
+  font-size: 24px;
+}
+button.react-calendar__navigation__arrow {
+  /* 맨 윗줄 양 옆 화살표 */
+  font-size: 20px;
+  font-weight: bold;
+}
+.react-calendar__tile.react-calendar__month-view__days__day > abbr {
+  /* 각 Day 하나씩 */
+  font-size: 20px;
+  font-family: 'Do Hyeon', Arial, Helvetica, sans-serif;
+}
+.react-calendar__tile.react-calendar__month-view__days__day:not(.react-calendar__month-view__days__day--weekend) + .react-calendar__tile.react-calendar__month-view__days__day.react-calendar__month-view__days__day--weekend:not(.react-calendar__month-view__days__day--neighboringMonth) > abbr {
+  /* 이번달 이내 매주 토요일 */
+  color: #0000d1;
+}
+.react-calendar__month-view__weekdays__weekday > abbr {
+  text-decoration-line: none !important;
+}
+
+/*react-calendar__tile react-calendar__month-view__days__day*/
