Style: 예약 상세내용 모달창 스타일 수정

--- a/business-fe/src/App.css
+++ b/business-fe/src/App.css
@@ -49,3 +49,10 @@ main {
     transform: rotate(360deg);
   }
 }
+
+@font-face {
+  font-family: 'GowunBatang-Regular';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2108@1.1/GowunBatang-Regular.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
