Feat: 구독하지 않은 헤어샵 예약 불가하게 화면 구성 추가

--- a/customer-front/ebs/src/components/hairshop/Card.css
+++ b/customer-front/ebs/src/components/hairshop/Card.css
@@ -14,7 +14,13 @@ div.card-body {
 }
 
 .card-title {
+  height: 24px;
 
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
 }
 
 .card-text {
